[package]
name = "hash_collisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
openssl = "0.10.55"
openssl-src = "300.1.2"
sha3 = "0.10.8"
